Fixed Contact Section Overflow

--- a/dev/styles/contactForm.css
+++ b/dev/styles/contactForm.css
@@ -76,6 +76,11 @@
   text-align: center;
 }
 
+.contact-box{
+  width: 90% !important;
+  margin: auto !important;
+}
+
 .contact-form .submit-button-wrapper input {
   border: none;
   border-radius: 4px;
